--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Tienda El Baratón</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -14,18 +14,6 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-
-    <style>
-      .dropdown-submenu {
-          position: relative;
-      }
-      
-      .dropdown-submenu .dropdown-menu {
-          top: 0;
-          left: 100%;
-          margin-top: -1px;
-      }
-      </style>
   </head>
   <body ng-app="elBaratonApp" >
     <!--[if lte IE 8]>
