Icons added to main page.

--- a/app/scripts/successful-purchase/successful-purchase.html
+++ b/app/scripts/successful-purchase/successful-purchase.html
@@ -2,5 +2,6 @@
 
   <h3 class="text-center">{{vm.message}}</h3>
   <h3 class="text-center">Gracias por elegir a tiendas <strong>El Baratón</strong></h3>
+  <h1> <span class="glyphicon glyphicon-ok text-success"></span> </h1>
   
 </div>
