Scripts files reubicated to controllers folder.

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 
     <!-- Add your site or application content here -->
 
-    <span ng-include=" 'scripts/nav-bar/nav-bar.html' "></span>
+    <span ng-include=" 'scripts/controllers/nav-bar/nav-bar.html' "></span>
     
     <div class="container container-body">
       <div ng-view=""></div>
@@ -69,12 +69,11 @@
     <script src="scripts/app.js"></script>
 
     <!--Controllers-->
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/about.js"></script>
-    <script src="scripts/nav-bar/nav-bar.js"></script>
-    <script src="scripts/products/products.js"></script>
-    <script src="scripts/shopping-car/shopping-car.js"></script>
-    <script src="scripts/successful-purchase/successful-purchase.js"></script>
+    <script src="scripts/controllers/main/main.js"></script>
+    <script src="scripts/controllers/nav-bar/nav-bar.js"></script>
+    <script src="scripts/controllers/products/products.js"></script>
+    <script src="scripts/controllers/shopping-car/shopping-car.js"></script>
+    <script src="scripts/controllers/successful-purchase/successful-purchase.js"></script>
 
     <!--Services-->
     <script src="scripts/service/DataService.js"></script>
