Identation converted to spaces.

--- a/app/scripts/controllers/main/main.html
+++ b/app/scripts/controllers/main/main.html
@@ -2,7 +2,7 @@
   <h1>Tiendas
     <strong>El Baratón</strong>
   </h1>
-  <h3 class="text-center">Gracias por elegirnos</h3>
+  <h3 class="text-center">{{vm.message}}</h3>
   <h1>
     <span class="glyphicon glyphicon-list-alt text-success"></span>
     <span class="glyphicon glyphicon-glass text-success"></span>
