--- a/app/scripts/controllers/successful-purchase/successful-purchase.html
+++ b/app/scripts/controllers/successful-purchase/successful-purchase.html
@@ -1,7 +1,11 @@
 <div class="jumbotron">
 
   <h3 class="text-center">{{vm.message}}</h3>
-  <h3 class="text-center">Gracias por elegir a tiendas <strong>El Baratón</strong></h3>
-  <h1> <span class="glyphicon glyphicon-ok text-success"></span> </h1>
-  
+  <h3 class="text-center">Gracias por elegir a tiendas
+    <strong>El Baratón</strong>
+  </h3>
+  <h1>
+    <span class="glyphicon glyphicon-ok text-success"></span>
+  </h1>
+
 </div>
