--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,6 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-ui-notification/dist/angular-ui-notification.css" />
-    
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -30,7 +29,7 @@
       <div ng-view=""></div>
     </div>
 
-    <div class="footer">
+    <div class="footer text-right">
       <div class="container">
         <p><span class="glyphicon glyphicon-heart"></span> Juan Camilo Velásquez Vanegas</p>
       </div>
@@ -61,7 +60,6 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-notification/dist/angular-ui-notification.js"></script>
-    
     <!-- endbower -->
     <!-- endbuild -->
 
