--- a/app/scripts/controllers/products/products.html
+++ b/app/scripts/controllers/products/products.html
@@ -20,16 +20,19 @@
     <select class="form-control" ng-model="vm.filterByQuantity" ng-options="item.value as item.description for item in vm.listQuantity">
     </select>
   </div>
-<!--
+
   <div class="form-group col-md-2">
     <label>Precio mínimo</label>
-    <input ng-blur="vm." ng-model="vm.minPrice" type="text" class="form-control col-md-2 text-center">
+    <input ng-model="vm.minPrice" type="text" class="form-control col-md-2 text-center">
   </div>
   <div class="form-group col-md-2">
     <label>Precio máximo</label>
     <input ng-model="vm.maxPrice" type="text" class="form-control col-md-2 text-center">
   </div>
--->
+  <div class="form-group col-md-2">
+    <button type="button" class="btn btn-success">Aplicar precios</button>
+  </div>
+  
   <table class="table">
     <thead>
       <tr>
