--- a/app/scripts/controllers/shopping-car/shopping-car.html
+++ b/app/scripts/controllers/shopping-car/shopping-car.html
@@ -36,7 +36,7 @@
         </td>
         <td>
           <span title="Actualizar producto" ng-click="vm.updateQuantity(product)" class="pointer glyphicon glyphicon-refresh shopping-icon text-success"></span>
-          <span title="Eliminar del carrito" ng-click="vm.deleteFromShoppingCar(product)" class="pointer glyphicon glyphicon-remove shopping-icon text-danger"></span>
+          <span title="Eliminar producto" ng-click="vm.deleteFromShoppingCar(product)" class="pointer glyphicon glyphicon-remove shopping-icon text-danger"></span>
         </td>
       </tr>
     </tbody>
