--- a/app/scripts/controllers/nav-bar/nav-bar.html
+++ b/app/scripts/controllers/nav-bar/nav-bar.html
@@ -1,5 +1,5 @@
 <div class="header" ng-controller="NavBarCtrl as vm">
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
 
@@ -24,15 +24,16 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-submenu" ng-repeat="sublevel in category.sublevels">
-                                <a ng-if="!sublevel.sublevels || sublevel.sublevels.length == 0" class="pointer test" ng-click="vm.natigateToProducts(category, sublevel)">
+                                <a ng-if="!sublevel.sublevels || sublevel.sublevels.length == 0" class="pointer drop-sub-menu" 
+                                    ng-click="vm.natigateToProducts(category, sublevel)">
                                     {{sublevel.name}}
                                 </a>
-                                <a ng-if="sublevel.sublevels.length > 0" class="pointer test">{{sublevel.name}}
+                                <a ng-if="sublevel.sublevels.length > 0" class="pointer drop-sub-menu">{{sublevel.name}}
                                     <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu" ng-if="sublevel.sublevels.length > 0">
                                     <li ng-repeat="level in sublevel.sublevels">
-                                        <a class="pointer test" ng-click="vm.natigateToProducts(sublevel, level)">{{level.name}}
+                                        <a class="pointer drop-sub-menu" ng-click="vm.natigateToProducts(sublevel, level)">{{level.name}}
                                         </a>
                                     </li>
                                 </ul>
@@ -43,7 +44,7 @@
                 <ul class="nav navbar-nav pull-right">
                     <li>
                         <a class="pointer" ng-click="vm.changeUrl('shopping-car')">Mi carrito
-                            <span class="badge badge-success">{{vm.totalProducts}}</span>
+                            <span class="badge badge-success shopping-car-color">{{vm.totalProducts}}</span>
                             <span class="glyphicon glyphicon-shopping-cart"></span>
                         </a>
                     </li>
@@ -55,7 +56,7 @@
 
 <script>
     $(document).ready(function () {
-        $('.dropdown-submenu a.test').on("click", function (e) {
+        $('.dropdown-submenu a.drop-sub-menu').on("click", function (e) {
             $(this).next('ul').toggle();
             e.stopPropagation();
             e.preventDefault();
