--- a/app/scripts/controllers/main/main.html
+++ b/app/scripts/controllers/main/main.html
@@ -4,10 +4,11 @@
   </h1>
   <h3 class="text-center">{{vm.message}}</h3>
   <h1>
-    <span class="glyphicon glyphicon-list-alt text-success"></span>
-    <span class="glyphicon glyphicon-glass text-success"></span>
-    <span class="glyphicon glyphicon-cutlery text-success"></span>
-    <span class="glyphicon glyphicon-apple text-success"></span>
-    <span class="glyphicon glyphicon-piggy-bank text-success"></span>
+    <span uib-tooltip="Elige tus productos" class="glyphicon glyphicon-list-alt text-success"></span>
+    <span uib-tooltip="Licores" class="glyphicon glyphicon-glass text-success"></span>
+    <span uib-tooltip="Comida" class="glyphicon glyphicon-cutlery text-success"></span>
+    <span uib-tooltip="Frutas y verduras" class="glyphicon glyphicon-apple text-success"></span>
+    <span uib-tooltip="Ahorra dinero" class="glyphicon glyphicon-piggy-bank text-success"></span>
+    <span uib-tooltip="Ahorra tiempo" class="glyphicon glyphicon-hourglass text-success"></span>
   </h1>
 </div>
