--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,6 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-ui-notification/dist/angular-ui-notification.css" />
-    <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -32,7 +31,7 @@
 
     <div class="footer text-right">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> Juan Camilo Velásquez Vanegas</p>
+        <p><span class="glyphicon glyphicon-heart text-danger"></span> Juan Camilo Velásquez Vanegas</p>
       </div>
     </div>
 
@@ -61,7 +60,6 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-notification/dist/angular-ui-notification.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
@@ -75,12 +73,12 @@
     <script src="scripts/controllers/products/products.js"></script>
     <script src="scripts/controllers/shopping-car/shopping-car.js"></script>
     <script src="scripts/controllers/successful-purchase/successful-purchase.js"></script>
+    <script src="scripts/controllers/not-found/not-found.js"></script>
 
     <!--Services-->
     <script src="scripts/service/DataService.js"></script>
     <script src="scripts/service/StorageService.js"></script>
     <script src="scripts/service/ProductService.js"></script>
-    <!-- <script src="scripts/index/index.js"></script> -->
     <!-- endbuild -->
 
 </body>
