--- a/app/scripts/controllers/successful-purchase/successful-purchase.html
+++ b/app/scripts/controllers/successful-purchase/successful-purchase.html
@@ -5,7 +5,10 @@
     <strong>El Baratón</strong>
   </h3>
   <h1>
-    <span class="glyphicon glyphicon-ok text-success"></span>
+    <span uib-tooltip="Compra exitosa" class="glyphicon glyphicon-ok text-success"></span>
   </h1>
-
+  <h2>
+    <span uib-tooltip="Llévame al inicio" ng-click="vm.goToHome()" 
+      class="glyphicon glyphicon-home pointer"></span>
+  </h2>
 </div>
